lintian (2.5.51) UNRELEASED; urgency=medium

  XXX: generate tag summary

  * checks/cruft.desc:
    + [BR] Document long line tagged source-is-missing as a feature
      not a bug.  (Closes: #849470).
  * checks/files.pm:
    + [BR] Do not report duplicates for package-installs-apt-preferences
      and package-installs-apt-sources.  (Closes: #814521).

 -- Bastien Roucariès <roucaries.bastien+debian@gmail.com>  Fri, 30 Dec 2016 17:14:54 +0100

lintian (2.5.50) unstable; urgency=medium

  * Summary of tag changes:
    + Added:
      - invalid-value-in-built-using-field
      - license-problem-convert-utf-code
      - new-package-should-not-package-python2-module
      - php-script-but-no-php-cli-dep
      - php-script-with-unusual-interpreter
    + Removed:
      - php-script-but-no-phpX-cli-dep

  * checks/binaries.{desc,pm}:
    + [NT] Handle RUNPATH like we handle RPATH.  (Closes: #844903)
    + [NT] Update hardening-no-pie description to reflect that
      PIE is on by default in Debian.
  * checks/cruft.desc:
    + [BR] Detect utf convert non free code.
      (Closes: #843595)
  * checks/deb-format.pm:
    + [NT] Permit uncompressed {control,data}.tar members plus xz
      compressed control.tar files in deb files.  Thanks to
      Guillem Jover for the report.  (Closes: #834867)
  * checks/debhelper.pm:
    + [BR] Apply patch from Yann Soubeyrand :
      "Allow debhelper "--with" addons to be quoted".
      (Closes: #839822)
  * checks/files.{desc,pm}:
    + [NT] Check for invalid clauses in "Built-Using" fields.  Thanks to
      Andrey Rahmatullin for the suggestion.  (Closes: #847558)
    + [NT] Apply patch from Josh Triplett to add new sections to
      descriptions.
  * checks/files.desc:
    + [NT] Document that we no longer accept "virtual packages"
      for deliberately empty packages.  If your package receives
      an "empty-binary-package" tag, please replace the use of
      "virtual package".
  * checks/{files,scripts}.pm: