@@ -209,19 +209,6 @@ sub load_check {
     my $cs_pkg = $self->{'script_pkg'};
     my $run;
 
-    if (!-f $cs_path) {
-        # Try the "old" extensionless path (i.e. strip ".pm")
-        # - This can go away in 2.5.15 or later
-        my $alt_path = substr($cs_path, 0, -3);
-        if (-f $alt_path) {
-            my $name = $self->name;
-            warnings::warnif('deprecated',
-                "[deprecated] Check module for $name missing \".pm\" extension"
-                  . " (should be: $cs_path)");
-            $self->{'script_path'} = $cs_path = $alt_path;
-        }
-    }
-
     require $cs_path;
 
     {
